<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

   <LinearLayout
       android:id="@+id/Heading_line"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@string/logo"
            android:padding="5dp"
            android:src="@drawable/grosseschuleicon60hell" >

        </ImageView>

        <TextView
            android:id="@+id/heading_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textSize="18sp">
        </TextView>
    </LinearLayout>

   <EditText
       android:id="@+id/codeInputField"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/CodeName"
       android:inputType="text" 
       android:maxEms="10"/>
  
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:padding="3dp" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />
 
            <TextView
            android:id="@+id/InfoCodeText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/InfoCodeText" 
            android:textSize="15sp"/>
        
        </FrameLayout>

        
    </ScrollView>

   <LinearLayout
       android:id="@+id/Bottom_line"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="bottom|center_horizontal" >

       <Button
           android:id="@+id/code_entry_cancel_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="left"
           android:layout_weight="1"
           android:text="@string/alert_dialog_cancel" />

       <Button
           android:id="@+id/code_entry_ok_button"
           android:layout_width="50dp"
           android:layout_height="wrap_content"
           android:layout_gravity="right"
           android:layout_weight="2"
           android:text="@string/alert_dialog_ok" />
        
    </LinearLayout>
</LinearLayout>