<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="3dp"
    tools:context=".InfoScreen" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!--
        <LinearLayout
            android:id="@+id/Heading_line"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/logo"
                android:padding="5dp"
                android:src="@drawable/grosseschuleicon60hell" >
            </ImageView>

            <TextView
                android:id="@+id/heading_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:visibility="visible" >
            </TextView>
        </LinearLayout>
        -->

        <TextView
            android:id="@+id/InfoText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textSize="15sp"
            android:text="@string/InfoText" >
        </TextView>

       <TextView
            android:id="@+id/myID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textSize="15sp"
            android:text="" >
        </TextView>
        
        <LinearLayout
            android:id="@+id/Button_line"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <Button
                android:id="@+id/DirectButton"
                android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/plan_ohne_widget" />

            <Button
                android:id="@+id/OKInfoButton"
                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/alert_dialog_ok" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>